--- a/kubernetes/quick-mpi-cpu.yaml
+++ b/kubernetes/quick-mpi-cpu.yaml
@@ -18,8 +18,7 @@ spec:
       containers:
       - name: quick
         image: kkricksdsu/quick:mpi-cpu
-        command: ["/bin/bash", "-c", "cd /data/input && mpirun --allow-run-as-root -np 2 quick.MPI water.in && sleep 3600"]
-        # command: ["/bin/bash", "-c", "./runtest --serial --full && sleep 3600"]
+        command: ["/bin/bash", "-c", "chown -R root:root /data && chmod 744 /data/scripts/*.sh && cd /data/scripts && ./mpi-cpu.sh"]
         resources:
           limits:
             cpu: "4"
