--- a/kubernetes/quick-mpi-cuda.yaml
+++ b/kubernetes/quick-mpi-cuda.yaml
@@ -10,10 +10,10 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
             - matchExpressions:
-              - key: nvidia.com/gpu.product
-                operator: In
-                values:
-                - NVIDIA-GeForce-GTX-1080-Ti
+                - key: nvidia.com/gpu.product
+                  operator: In
+                  values:
+                  - NVIDIA-A100-80GB-PCIe
       initContainers:
       - name: rclone
         image: rclone/rclone:latest
@@ -27,16 +27,19 @@ spec:
       containers:
       - name: quick
         image: kkricksdsu/quick:mpi-cuda-11.7.1
-        command: ["/bin/bash", "-c", "chown -R root:root /data && chmod 744 /data/scripts/*.sh && cd /data/scripts && ./mpi-cuda.sh"]
+        command: ["/bin/bash", "-c", "chown -R root:root /data \
+                  && chmod 755 /data/scripts/*.sh \
+                  && cd /data/scripts \
+                  && ./bench.sh -i /data/input -o /data/output/mpi-cuda -f psb5,morphine,taxol,valinomycin -c quick.cuda.MPI"]
         resources:
           limits:
-            cpu: "4"
-            memory: "8Gi"
-            nvidia.com/gpu: "2"
+            cpu: "32"
+            memory: "320Gi"
+            nvidia.com/gpu: "4"
           requests:
-            cpu: "2"
-            memory: "4Gi"
-            nvidia.com/gpu: "2"
+            cpu: "16"
+            memory: "320Gi"
+            nvidia.com/gpu: "4"
         volumeMounts:
         - name: quick-qm-benchmarks
           mountPath: "/data"
