--- a/kubernetes/quick-single-cuda.yaml
+++ b/kubernetes/quick-single-cuda.yaml
@@ -26,8 +26,11 @@ spec:
           readOnly: true
       containers:
       - name: quick
-        image: kkricksdsu/quick:single-cuda-11.7.1
-        command: ["/bin/bash", "-c", "chown -R root:root /data && chmod 744 /data/scripts/*.sh && cd /data/scripts && ./single-cuda.sh"]
+        image: kkricksdsu/quick:mpi-cuda-11.7.1
+        command: ["/bin/bash", "-c", "chown -R root:root /data \
+                  && chmod 755 /data/scripts/*.sh \
+                  && cd /data/scripts \
+                  && ./bench.sh -i /data/input -o /data/output/mpi-cuda -f psb5,morphine,taxol,valinomycin -c quick.cuda"]
         resources:
           limits:
             cpu: "4"
